2005-02-02  Martin Baulig  <martin@ximian.com>

	* delegate.cs (Delegate.DefineType): Report an internal error if
	TypeManager.multicast_delegate_type is null.  See bug #72015 for
	details.	

2005-01-29  Miguel de Icaza  <miguel@novell.com>

	* pending.cs: Produce better code (no nops produced by using Ldarg
	+ value).
	
	* pending.cs (PendingImplementation.DefineProxy): It was not `arg
	i - 1' it should be arg + 1.

	Fixes bug #71819.
	
2005-01-26  Martin Baulig  <martin@ximian.com>

	* cs-parser.jay (indexer_declarator): Don't report an error if we
	have type parameters since we can be an explicit interface
	implementation; fixes #71449.

2005-01-26  Martin Baulig  <martin@ximian.com>

	* class.cs (TypeContainer.AttributeTargets): Return the correct
	AttributeTargets depending on our `Kind' instead of throwing an
	exception; fixes #71632.

2005-01-26  Martin Baulig  <martin@ximian.com>

	* delegate.cs (Delegate.DefineType): Correctly define our type
	parameters.  Fixes #71483.

2005-01-25  Raja R Harinath  <rharinath@novell.com>

	Fix #71602.
	* expression.cs (MemberAccess.DoResolve): Don't complain with
	cs0572 when the LHS of a member access has identical name and type
	name.

2005-01-25  Marek Safar  <marek.safar@seznam.cz>

	Fix #71651, #71675
	* attribute.cs (ExtractSecurityPermissionSet): Catch exceptions from
	CreatePermission.
	Create custom PermissionSet only for PermissionSetAttribute.

2005-01-24  Marek Safar  <marek.safar@seznam.cz>

	Fix #71649
	* class.cs (StaticClass.DefineContainerMembers): Enable enums and
	delegates in static class.

2005-01-24  Martin Baulig  <martin@ximian.com>

	* flowanalysis.cs (FlowBranching.UsageVector.MergeChild): If we're
	merging an implicit block, just use its reachability.

	* statement.cs (Block.Resolve): Make the unreachable code check
	work wrt. implicit blocks; see test-337 from #63842.

2005-01-21  Alp Toker  <alp@atoker.com>
 
 	* cs-parser.jay: destructor_declaration's container is PartialContainer